--- a/src/components/v2/components/Navbar.css
+++ b/src/components/v2/components/Navbar.css
@@ -229,6 +229,7 @@
     top: 80px;
     left: -100%;
     opacity: 1;
+    visibility: hidden;
     transition: all 0.5s ease;
   }
 
@@ -237,6 +238,7 @@
     left: 0;
     top: 49px;
     opacity: 1;
+    visibility: visible;
     transition: all 0.5s ease;
     z-index: 110;
     margin: 0px;
@@ -249,6 +251,7 @@
     left: 0;
     top: 50px;
     opacity: 1;
+    visibility: visible;
     transition: all 0.5s ease;
     z-index: 100;
     margin: 0px;
@@ -276,6 +279,7 @@
     transform: translate(-100%, 60%);
     font-size: 1rem;
     cursor: pointer;
+    line-height: 1;
   }
 
   .nav-links-mobile {
