--- a/src/components/v2/components/skills.css
+++ b/src/components/v2/components/skills.css
@@ -86,17 +86,23 @@
 } */
 
 @media only screen and (max-width: 1021px) {
-  .skills-section {
-    margin-top: 36%;
-  }
-
-  .skills-title {
-    margin-top: 24%;
-  }
-
   .icon-img-container {
     width: 100px;
     height: 100px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .skills__container-v2,
+  .skills__container-v2-white {
+    min-height: 0;
+    padding: 3.5rem 0.75rem;
+  }
+
+  .icon-img-container {
+    width: 88px;
+    height: 88px;
+    margin: 0.75rem;
   }
 }
 
